# si7021-t-rh

./: Cargo.toml  README.md
examples/: simple.rs
examples/embassy-async/: main-embassy.rs
examples/rpi/src/: Cargo.toml  rpi-example.rs
src/: constants.rs  data.rs  error.rs  lib.rs
