[package]
name = "si7021-t-rh"
version = "0.1.0"
edition = "2021"

authors = ["fordauthor42@gmail.com"]
repository = "https://github.com/marvinrobot42/s17021-t-rh.git"
description = "ST STHS34PF80 driver"
documentation = "https://docs.rs/sths34pf80si7021-t-rh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT OR Apache-2.0"
keywords = ["driver", "sensor", "i2c", "Si7021", "Si7013"]
categories = ["embedded", "no-std"]
publish = true
exclude = [
    ".gitattributes",
    ".drone.yml",
    ".pre-commit-config.yaml",
    "Makefile.toml",
]

[features]
default = []

[dependencies]
log = { version = "0.4.18", default-features = false }
embedded-hal = {version = "1.0"}

[build-dependencies]
embuild = "=0.31.4"
