[package]
name = "si7021-t-rh"
version = "0.1.6"
edition = "2021"

authors = ["fordauthor42@gmail.com"]
repository = "https://github.com/marvinrobot42/si7021-t-rh.git"
description = "Si7021 driver (7013, 7020 and 7021)"
documentation = "https://docs.rs/si7021-t-rh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT OR Apache-2.0"
keywords = ["driver", "sensor", "i2c", "si7021"]
categories = ["embedded", "no-std"]
publish = true
exclude = [
    ".gitattributes",
    ".drone.yml",
    ".pre-commit-config.yaml",
    "Makefile.toml",
]

[features]
default = ["sync"]
sync = []
async = ["embedded-hal-async"]

[dependencies]
log = { version = "0.4.18", default-features = false }
embedded-hal = {version = "1.0"}
embedded-hal-async = { version = "1.0", optional = true }
maybe-async-cfg = "0.2"

[build-dependencies]
embuild = "=0.31.4"
